cluster/04_management-tools-extra/kubesphere/console-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ks-console
  namespace: kubesphere-system
spec:
  ingressClassName: "traefik"
  rules:
    - host: "kubesphere.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ks-console
                port:
                  name: nginx
    - host: "kubesphere.direct.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ks-console
                port:
                  name: nginx
  tls:
    - secretName: "${SECRET_DOMAIN/./-}-tls"
    - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
